unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__App_Branding_Updated__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__App_Branding_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App Branding Updated</label>
    <type>Checkbox</type>
</CustomField>