unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Automerge_Case_Limit__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Automerge_Case_Limit__c</fullName>
    <label>Automerge Case Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>