unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Case_Comment_After_Unmerge__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Case_Comment_After_Unmerge__c</fullName>
    <label>Case Comment After Unmerge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>