unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Chatter_Case_Owners_After_Unmerge__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Chatter_Case_Owners_After_Unmerge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chatter Case Owners After Unmerge</label>
    <type>Checkbox</type>
</CustomField>