unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Clone_Attachments_in_Future__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Clone_Attachments_in_Future__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Clone Attachments in Future</label>
    <type>Checkbox</type>
</CustomField>