unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Default_Search_Tab__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Default_Search_Tab__c</fullName>
    <label>Default Search Tab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>