unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Disable_Triggers__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Disable_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Triggers</label>
    <type>Checkbox</type>
</CustomField>