unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Duplicates_Label__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Duplicates_Label__c</fullName>
    <label>Duplicates Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>