unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Hit_List_Component_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Hit_List_Component_Date_Range__c</fullName>
    <description>The date range preferred by the user when using the Duplicate Case Utility Bar component.</description>
    <label>Hit List Component Date Range</label>
    <length>64</length>
    <type>Text</type>
</CustomField>