unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Max_Results__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Max_Results__c</fullName>
    <label>Max Results</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>