unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Merge_Error_Handling__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Merge_Error_Handling__c</fullName>
    <label>Merge Error Handling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>