unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Merged_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Merged_Case_Status__c</fullName>
    <label>Merged Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>