unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Merged_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Merged_Picklist_Value__c</fullName>
    <label>Merged Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>