unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Object_Cloning_Selection__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Object_Cloning_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Object Cloning Selection</label>
    <type>Checkbox</type>
</CustomField>