unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Primary_Case_Selection__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Primary_Case_Selection__c</fullName>
    <label>Primary Case Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>