unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Restrict_by_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Restrict_by_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restrict by Record Type</label>
    <type>Checkbox</type>
</CustomField>