unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Unmerge_Error_Handling__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Unmerge_Error_Handling__c</fullName>
    <label>Unmerge Error Handling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>