unpackaged/main/default/objects/csmrgp__User_Preferences__c/fields/csmrgp__Unmerge_Permission_Level__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Unmerge_Permission_Level__c</fullName>
    <label>Unmerge Permission Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>